traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:0: error: ')' expected but '}' found.
class TraversalByColumn extends SimpleBuggle {override def run() {var x:Int=0; var y:Int=0; var i:Int=0; var j:Int=0; x=getWorldWidth(); y=getWorldHeight(); var count:Int=0; for (i<-1 to (x-1) {for (j<-1 to (y-1) {writeMessage(count); setPos(i,j); count=count+1}}
                                                                                                                                                                                                                                                                      ^TraversalByColumn:1: error: ')' expected but '}' found.
} 
^